# agent-kit

./: .gitignore  Cargo.toml  README.md  VERSIONS.md
.github/workflows/: release.yml
src/: audit.rs  detect.rs  lib.rs  skill.rs
