[package]
name = "agent-kit"
version = "0.2.0"
edition = "2024"
description = "Toolkit for CLI tools integrating with AI agent loops"
license = "MIT"
repository = "https://github.com/btakita/agent-kit"

[features]
audit = ["dep:instruction-files"]

[dependencies]
anyhow = "1"
instruction-files = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
